--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@ bin/*
 gen/*
 .idea/*
 libs/ActionBarSherlock/.idea/*
+
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+# Eclipse generated files #
+###########################
+project.properties
